<resources>
    <string name="app_name">MZTI</string>
    <string name="team_name">MZC</string>

    <string name="dialog_msg_001">잠시만 기다려 주세요.</string>
    <string name="dialog_msg_002">네트워크 연결이 필요합니다.\n네트워크 연결 후에 다시 실행해주세요.</string>

    <string name="toast_msg_success_save_mbti_card">MBTI 증을 저장했어요.</string>

    <string name="toast_msg_error_001">예기치 못한 오류가 발생했습니다. 잠시 후에 다시 시도해 주세요.</string>
    <string name="toast_msg_request_permission">MZTI를 사용하려면 저장공간 권한이 필요합니다.</string>
    <string name="toast_msg_sign_up_success">회원가입 되었습니다.</string>

    <string name="api_connection_fail_msg">서버로부터 응답이 없습니다. 잠시 후에 다시 시도해 주세요.</string>
    <string name="login_fail_msg">계정 정보가 올바르지 않습니다. 다시 한번 확인해 주세요.</string>

    <string name="confirm_btn">완료</string>
    <string name="next_btn">다음</string>
    <string name="cancel_btn">취소</string>

    <string name="signIn_idHint">ID를 입력하세요</string>
    <string name="signIn_pwHint">비밀번호를 입력하세요</string>
    <string name="signIn">로그인</string>
    <string name="signIn_letsGoSignUp">계정이 없으신가요? 회원가입 하러가기</string>

    <string name="signUp_title_id">ID 입력</string>
    <string name="signUp_id_info">ID는 변경할 수 없으니 신중히 입력바랍니다.</string>
    <string name="signUp_title_pw">비밀번호 입력</string>
    <string name="signUp_pw_info">비밀번호는 최소 6자 이상이어야 합니다.</string>
    <string name="signUp_pw_warning">비밀번호가 서로 다릅니다.</string>
    <string name="signUp_title_nickname">닉네임 입력</string>
    <string name="signUp_nickname_info">닉네임은 최대 8자까지 가능합니다.</string>
    <string name="signUp_nicknameHint">닉네임을 입력하세요</string>
    <string name="signUp_title_mbti">MBTI 선택</string>
    <string name="signUp_mbti_info">MBTI를 선택해 주세요.</string>

    <string name="friends_title">친구</string>
    <string name="friends_count">친구 %1$d명</string>
    <string name="addFriends_title">ID로 친구 추가</string>
    <string name="addFriends_myIdTitle">내 아이디</string>
    <string name="addFriends_friendIdHint">친구 ID</string>
    <string name="addFriends_confirm">친구추가</string>
    <string name="addFriends_add_success">새로운 친구 %1$s님을 환영해 주세요!</string>
    <string name="removeFriend_confirm">더 이상 보고 싶지 않아요 :(</string>
    <string name="removeFriend_cancel">취소하기</string>

    <string name="friendMbti_title">\'%1$s\'님의 MBTI</string>

    <string name="compare_title">MBTI 유형 비교하기</string>
    <string name="compare_warningTitle">지나친 MBTI 과몰입은\n정신 건강을 해칠 수 있습니다.</string>
    <string name="compare_teamName">-MZC-</string>
    <string name="compare_descriptionTitle">#요약</string>
    <string name="compare_keywordTitle">#키워드</string>
    <string name="compare_goodJobTitle">#어울리는 일</string>
    <string name="compare_loveStyleTitle">#연애 성향</string>
    <string name="compare_goodPeopleTitle">#잘맞는 사람</string>
    <string name="compare_bestMbtiTitle">#Best 조합</string>
    <string name="compare_worstMbtiTitle">#Worst 조합</string>
    <string name="compare_talkHabitTitle">#자주하는 말</string>
    <string name="compare_virtualPeopleTitle">#가상 인물</string>

    <string name="learning_title">MZTI 학습</string>
    <string name="learning_subTitle_01">#MZTI 학습</string>
    <string name="learning_content_01">상황별 문답을 통해 해당 MBTI에 대한 자신의 이해도를 테스트할 수 있습니다.</string>
    <string name="learning_content_02">상황을 읽고 떠오른 생각을 바로 선택해 주세요.\n한 번 선택한 답변은 수정할 수 없습니다.</string>
    <string name="learning_subTitle_02">#자나깨나 ‘과몰입’ 조심</string>
    <string name="learning_content_03">MBTI는 16가지 유형으로 자신과 타인을 이해하는데 도움을 주는 \‘도구\'입니다.</string>
    <string name="learning_content_04">16가지 유형내에서도 다양한 형태로 나타날 수 있으며, 그 형태들은 모두 각각의 아름다움을 가지고 있습니다.</string>
    <string name="learning_content_05">MBTI는 상황 및 환경에 따라 변경될 수 있고, 이는 이상한 것이 아닙니다. 단지 선천적으로 지닌, 특별한 이유없이 상대적으로 끌리는 것을 알아볼 수 있습니다.</string>
    <string name="learning_agree">위의 내용을 확인했습니다.</string>
    <string name="learning_startText">테스트 시작</string>
    <string name="learning_selectMbti">테스트할 MBTI를 선택하세요</string>

    <string name="test_title">MZTI 학습</string>
    <string name="testLayout_title">#%1$s 문제</string>
    <string name="textLayout_contentEnd">이 때 %1$s의 반응은?</string>
    <string name="test_mbtiBadgeTitle">#MBTI 뱃지</string>
    <string name="test_mbtiBadgeInfo_01">MBTI 뱃지는 각 성향별 점수를 반영해요!</string>
    <string name="test_mbtiBadgeInfo_02">획득한 뱃지는 프로필 화면에서 확인할 수 있어요.</string>
    <string name="test_totalScoreTitle">#종합 점수</string>
    <string name="test_totalScore">%1$d점</string>
    <string name="test_totalScore_81_to_100">너 MZC 동료가 돼라!</string>
    <string name="test_totalScore_61_to_80">이렇게 잘 맞출수가..!</string>
    <string name="test_totalScore_41_to_60">다 찍으신건 아니죠..?</string>
    <string name="test_totalScore_21_to_40">좀 더 노력하셔야겠어요 ~</string>
    <string name="test_totalScore_0_to_20">아하, MBTI를 전혀 모르시군요..?</string>

    <string name="userProfile_title">프로필</string>
    <string name="mbtiCard_title">#MBTI증</string>
    <string name="mbtiCard_id">ID: %1$s</string>
    <string name="mbtiCard_shareMsg">MBTI증을 친구들과 함께 공유해 보세요!</string>
    <string name="userProfile_profileEdit">프로필 수정하기</string>
    <string name="userProfile_mbtiTest">MBTI 검사하러 가기</string>
    <string name="mbtiBadge_title">#MBTI 뱃지</string>
    <string name="mbtiBadge_badgeInfo">MBTI 학습을 통해 뱃지를 모을 수 있어요!</string>
    <string name="mbtiBadge_letsGoTest">뱃지 모으러 가기</string>
    <string name="appVersion_title">앱 버전</string>
    <string name="appVersion_versionName">ver %1$s</string>
    <string name="logout_title">로그아웃</string>
    <string name="logout_dialog">정말 로그아웃 하시겠습니까?</string>

    <string name="userProfileEdit_title">프로필 수정</string>
    <string name="userProfileEdit_changeProfileImg">프로필 사진 변경하기</string>
    <string name="userProfileEdit_id">ID</string>
    <string name="userProfileEdit_nickname">닉네임</string>
    <string name="userProfileEdit_nicknameWarning">닉네임은 1~8자 이내이어야 합니다.</string>
    <string name="userProfileEdit_mbti">MBTI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>