<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".learning.view.LearningFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_learning_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_learning_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/learning_title"
            android:textColor="@color/text_black"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_learning_subTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:includeFontPadding="false"
        android:letterSpacing="-0.05"
        android:text="@string/learning_subTitle_01"
        android:textColor="@color/text_black"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_learning_title" />

    <View
        android:id="@+id/view_learning_divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:background="@color/border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_learning_subTitle1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_learning_content_01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_learning_content"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_learning_divider1">

        <TextView
            android:id="@+id/tv_learning_content_01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/learning_content_01"
            android:textColor="@color/text_black"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@id/tv_learning_content_02"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_learning_content_02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/learning_content_02"
            android:textColor="@color/text_black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_learning_content_01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_learning_subTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:includeFontPadding="false"
        android:letterSpacing="-0.05"
        android:text="@string/learning_subTitle_02"
        android:textColor="@color/text_black"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_learning_content_01" />

    <View
        android:id="@+id/view_learning_divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:background="@color/border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_learning_subTitle2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_learning_content_02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_learning_content"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_learning_divider2">

        <TextView
            android:id="@+id/tv_learning_content_03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/learning_content_03"
            android:textColor="@color/text_black"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@id/tv_learning_content_04"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_learning_content_04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/learning_content_04"
            android:textColor="@color/text_black"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@id/tv_learning_content_05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_learning_content_03" />

        <TextView
            android:id="@+id/tv_learning_content_05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/learning_content_05"
            android:textColor="@color/text_black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_learning_content_04" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_learning_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_learning_startTest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/iv_learning_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/icon_checkbox_unselected"
            app:layout_constraintBottom_toBottomOf="@id/tv_learning_agree"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_learning_agree"
            app:layout_constraintTop_toTopOf="@id/tv_learning_agree" />

        <TextView
            android:id="@+id/tv_learning_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/learning_agree"
            android:textColor="@color/text_black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_learning_agree"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_learning_startTest"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_blue_button"
        android:enabled="false"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:letterSpacing="-0.05"
        android:text="@string/learning_startText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>