<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".test.view.TestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_test_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_test_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@drawable/icon_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/test_title"
            android:textColor="@color/text_black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_test_close"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.mzc.mzti.common.custom.MztiTestLayout
        android:id="@+id/cv_test_mztiTestLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_test_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_test_resultLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_test_title">

        <TextView
            android:id="@+id/tv_test_mbtiBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/test_mbtiBadgeTitle"
            android:textColor="@color/text_black"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_test_mbtiBadgeInfo_01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/test_mbtiBadgeInfo_01"
            android:textColor="@color/text_black"
            android:textSize="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_test_mbtiBadgeTitle" />

        <View
            android:id="@+id/view_test_mbtiBadgeDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="20dp"
            android:background="@color/border"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_test_mbtiBadgeInfo_01" />

        <com.mzc.mzti.common.custom.MztiBadgeView
            android:id="@+id/cv_test_mztiBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:badgeSize="large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_test_mbtiBadgeDivider"
            app:mbti="ISTJ"
            app:mbtiSize0="L"
            app:mbtiSize1="L"
            app:mbtiSize2="L"
            app:mbtiSize3="L" />

        <TextView
            android:id="@+id/tv_test_mbtiBadgeInfo_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/test_mbtiBadgeInfo_02"
            android:textColor="@color/text_hint"
            android:textSize="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_test_mztiBadge" />

        <TextView
            android:id="@+id/tv_test_totalScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/test_totalScoreTitle"
            android:textColor="@color/text_black"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_test_mbtiBadgeInfo_02" />

        <View
            android:id="@+id/view_test_totalScoreDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="20dp"
            android:background="@color/border"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_test_totalScoreTitle" />

        <TextView
            android:id="@+id/tv_test_totalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/test_totalScore"
            android:textColor="@color/text_black"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_test_totalScoreDivider" />

        <TextView
            android:id="@+id/tv_test_totalScoreInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/test_totalScore_81_to_100"
            android:textColor="@color/text_black"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_test_totalScore" />

        <TextView
            android:id="@+id/tv_test_resultConfirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/background_black_button"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/confirm_btn"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>